<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="header_cd_rssi">RSSI</string>
  <string name="header_rssi_default" translatable="false">0</string>
  <string name="header_record">Record</string>
  <string name="header_rds_ps" translatable="false">RDS PS</string>
  <string name="header_volume">Volume</string>
  <string name="header_stereo">Mono / Stereo</string>
  <string name="nill" translatable="false"/>
  <string name="dialog_frequency_title">Set frequency</string>
  <string name="application_name">Spirit 3</string>
  <string name="seek_down">Seek down</string>
  <string name="frequency">Frequency</string>
  <string name="seek_up">Seek up</string>
  <string name="button_previous">Previous</string>
  <string name="button_next">Next</string>
  <string name="button_stop">Stop</string>
  <string name="button_play_toggle">Pause / Play</string>
  <string name="test_mhz" translatable="false">888.8</string>
  <string name="notification_starting">Starting…</string>
  <string name="notification_button_pause">Pause</string>
  <string name="notification_button_play">Play</string>
  <string name="notification_button_stop">Stop</string>
  <string name="notification_button_record_stop">Stop record</string>
  <string name="notification_button_record_start">Record</string>
  <string name="notification_text_recording">; recording</string>
  <string name="preset_dialog_title">Edit preset</string>
  <string name="preset_dialog_remove">Remove</string>
  <string name="preset_dialog_replace">Replace</string>
  <string name="preset_dialog_cancel">Cancel</string>
  <string name="dialog_startup">Initializing Spirit 3… Please, wait…</string>
  <string name="toast_record_stop">Record saved</string>
  <string name="dialog_startup_build">build %d</string>
  <string name="popup_preset_create">Add here</string>
  <string name="popup_preset_replace">Replace by current</string>
  <string name="popup_preset_rename">Rename</string>
  <string name="popup_preset_remove">Delete</string>
  <string name="preset_rename_title">Rename preset</string>
  <string name="toast_frequency_changed">Frequency changed to %.1f MHz</string>
  <string name="toast_frequency_invalid">Invalid frequency</string>
  <string name="logcat_send_logs">Send logs</string>
  <string name="preference_summary_version" translatable="false">v%1$s (build %2$d%3$s)</string>
  <string name="frequency_invalid_format">Invalid format of frequency</string>
  <string name="pref_restart_title">Need restart</string>
  <string name="pref_restart_message">You\'ve modified preferences, that need restart tuner. Please, turn off tuner and turn on it again.</string>
  <string name="pref_restart_ok">OK</string>
  <string name="preference_title">Preferences</string>
  <string name="preference_tuner">Tuner</string>
  <string name="preference_tuner_stereo_title">Tuner stereo</string>
  <string name="preference_tuner_stereo_summary">Stereo</string>
  <string name="preference_tuner_sample_rate_title">Sample rate</string>
  <string name="preference_tuner_sample_rate_holder">Usual values 44100 and 48000</string>
  <string name="preference_tuner_audio_source_title">Audio source</string>
  <string name="preference_application">Application</string>
  <string name="preference_application_auto_start">Auto start</string>
  <string name="preference_application_auto_start_summary">Immediately start radio service after app started</string>
  <string name="preference_about">About</string>
  <string name="preference_about_version">Version</string>
  <string name="preference_about_4pda">4pda topic</string>
  <string name="preference_about_authors">Authors</string>
  <string name="preference_about_4pda_link"
      translatable="false">https://4pda.ru/forum/index.php?showtopic=543819</string>
  <string name="preference_about_github">GitHub repository</string>
  <string name="preference_about_github_summary">Modification are open source project</string>
  <string name="preference_about_github_link"
      translatable="false">https://github.com/vladislav805/Spirit3-FM</string>
  <string name="mhz"
      translatable="false">MHz</string>
  <string name="preference_application_custom_notification_title">Custom notification</string>
  <string name="preference_application_custom_notification_summary">Custom notification has more features for control</string>
  <string name="preference_application_visualizer_title">Visualizer</string>
  <string name="toast_debug_mode">WARNING! This is a debug version! It is strongly not recommended to use it as a usual application, as it can "kill" the memory, because the logs are constantly recorded. Use this collection only for one-time checks and logging!</string>

</resources>