<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!-- Middle display area: text frequency -->
  <LinearLayout
      android:layout_marginTop="@dimen/seek_frequency_margin_vertical"
      android:layout_marginBottom="@dimen/seek_frequency_margin_vertical"
      android:layout_marginLeft="@dimen/seek_frequency_margin_horizontal"
      android:layout_marginRight="@dimen/seek_frequency_margin_horizontal"
      android:gravity="center_vertical"
      android:layout_width="match_parent"
      android:layout_height="@dimen/frequency_height"
      android:orientation="horizontal">

<!-- Previous .1 -->
    <ImageView
        android:id="@+id/iv_prev"
        android:contentDescription="@string/button_previous"
        android:layout_width="@dimen/button_control_size"
        android:layout_height="@dimen/button_control_size"
        android:src="@drawable/ic_frequency_previous" />

<!-- Frequency -->
    <FrameLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false">
<!-- Real frequency -->
      <TextView
          android:id="@+id/tv_freq"
          android:contentDescription="@string/frequency"
          android:textSize="@dimen/frequency_mhz_font_size"
          android:textColor="@color/primary_blue"
          android:textAlignment="center"
          android:shadowColor="@color/primary_blue_shadow"
          android:shadowRadius="20"
          android:shadowDx="0"
          android:shadowDy="0"
          android:maxLines="1"
          android:gravity="center"
          android:layout_gravity="center_horizontal"
          android:layout_width="wrap_content"
          android:layout_height="match_parent" />
    </FrameLayout>

<!-- Next .1 -->
    <ImageView
        android:id="@+id/iv_next"
        android:contentDescription="@string/button_next"
        android:layout_width="@dimen/button_control_size"
        android:layout_height="@dimen/button_control_size"
        android:src="@drawable/ic_frequency_next" />
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginStart="@dimen/header_horizontal_margin"
        android:layout_marginEnd="@dimen/header_horizontal_margin"
        android:orientation="horizontal"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables">
      <ImageView
          android:id="@+id/iv_signal"
          android:src="@drawable/ic_signal_off"
          android:layout_marginEnd="@dimen/header_horizontal_margin"
          android:layout_gravity="center_vertical"
          android:layout_width="@dimen/header_icons_size"
          android:layout_height="@dimen/header_icons_size"
          android:contentDescription="@string/header_cd_rssi" />
      <TextView
          android:id="@+id/tv_rssi"
          android:contentDescription="@string/header_cd_rssi"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/header_rssi_default"
          android:textSize="@dimen/header_rssi_text_size"
          android:textStyle="normal"
          android:textColor="@color/header_grey"
          android:fontFamily="monospace"
          android:gravity="center_vertical|center_horizontal"
          android:layout_gravity="center_vertical|center_horizontal"
          android:maxLines="1" />
    </LinearLayout>
<!-- Current station name -->
    <TextView
        android:id="@+id/curr_name_station"
        android:textAlignment="center"
        android:textSize="@dimen/station_name_text_size"
        android:textColor="@color/primary_blue_shadow"
        android:layout_marginEnd="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/station_name_height" />
  </LinearLayout>

  <TextView
      android:id="@+id/curr_rds_ps"
      android:textAlignment="center"
      android:textSize="@dimen/rds_ps_size"
      android:textColor="@color/primary_blue_shadow"
      android:layout_marginTop="10dp"
      android:layout_gravity="center_vertical|center_horizontal"
      android:gravity="center_vertical|center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="@dimen/station_name_height" />

<!-- Seek frequency -->
  <HorizontalScrollView
      android:id="@+id/seek_scroll_frequency"
      android:layout_width="match_parent"
      android:layout_height="@dimen/seek_frequency_height">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
      <fm.a2d.sf.view.FrequencySeekView
          style="@style/FrequencySeekBar"
          android:thumbTint="@android:color/transparent"
          android:id="@+id/sb_freq_seek"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:layout_marginTop="10dp"
          android:layout_width="1920sp"
          android:layout_height="match_parent" />
    </LinearLayout>
  </HorizontalScrollView>

<!-- Controls -->
  <LinearLayout
      android:gravity="center_vertical|center_horizontal"
      android:layout_marginTop="@dimen/control_padding_top"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="@dimen/button_control_size">
    <ImageView
        android:id="@+id/iv_seekdn"
        android:contentDescription="@string/seek_down"
        android:src="@drawable/ic_fast_rewind"
        android:padding="12dp"
        android:layout_gravity="center_vertical"
        android:layout_width="@dimen/button_seek_size"
        android:layout_height="@dimen/button_seek_size" />

    <ImageView
        android:id="@+id/iv_play_toggle"
        android:contentDescription="@string/button_play_toggle"
        android:layout_width="@dimen/button_control_size"
        android:layout_height="@dimen/button_control_size"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:src="@drawable/ic_play" />

    <ImageView
        android:id="@+id/iv_seekup"
        android:contentDescription="@string/seek_up"
        android:src="@drawable/ic_fast_forward"
        android:padding="12dp"
        android:layout_gravity="center_vertical"
        android:layout_width="@dimen/button_seek_size"
        android:layout_height="@dimen/button_seek_size" />
  </LinearLayout>

<!-- Visualizer -->
  <LinearLayout
      android:id="@+id/vis"
      android:visibility="gone"
      android:layout_width="match_parent"
      android:layout_height="@dimen/visualizer_height"
      android:layout_marginTop="@dimen/visualizer_vertical_margin"
      android:layout_marginBottom="@dimen/visualizer_vertical_margin">
    <fm.a2d.sf.view.VisualizerView
        android:id="@+id/gui_vis"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
  </LinearLayout>
</LinearLayout>

